# mlxbgem3

./: .env  .gitignore  AGENTS.md  README.md  bgem3_embed.py  bgem3_mcp.py  bgem3_rerank.py  changelog.md  convert_models.py  main.py  mlx_model.py  preflight.py  pyproject.toml  restart.sh  service_info.md  start.py  test_service.py  todo.md
test/: 2604200737.md  api_tests.py
